syntax = "proto3";
import "google/protobuf/empty.proto";
option go_package = ".;proto";

service User{
  rpc GetUserList(PageInfo) returns (UserListResponse);//用户列表
  rpc GetUserMobile(MobileRequest) returns(UserInfoResponse);//通过mobile查询用户
  rpc GetUserById(IdRequest) returns(UserInfoResponse);//通过id查询用户
  rpc CreateUser(CreateUserInfo) returns(UserInfoResponse);//添加用户
  rpc UpdateUser(UpdateUserInfo) returns(google.protobuf.Empty);//更新用户
  rpc CheckPassword(PasswordCheck) returns(CheckResponse);//检查用户密码
}

message PageInfo{
  uint32 pn = 1;
  uint32 pSize = 2;
}
message PasswordCheck{
  string password = 1;
  string encryptedPassword = 2;

}

message CheckResponse{
  bool success = 1;
}

message MobileRequest{
  string mobile = 1;
}

message IdRequest{
  int32 id = 1;
}
message UserInfoResponse{
  int32 id = 1;
  string password = 2;
  string mobile = 3;
  string nikeName = 4;
  uint64 birthDay = 5;
  string gender = 6;
  int32 role = 7;
}

message CreateUserInfo{
  string nikeName = 1;
  string password = 2;
  string mobile = 3;
}

message UpdateUserInfo{
  int32 id = 1;
  string nikeName = 2;
  string gender = 3;
  uint64 birthDay = 4;
}

message UserListResponse{
  int32 total = 1;
  repeated UserInfoResponse data = 2;
}